--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,13 @@
 services:
+  # Backend API Service
   - type: web
     name: career-profiling-api
     env: python
-    pythonVersion: 3.11.9
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.0
       - key: DATABASE_URL
         fromDatabase:
           name: career-profiling-db
@@ -20,6 +22,7 @@ services:
         sync: false
 
 databases:
+  # PostgreSQL Database
   - name: career-profiling-db
     databaseName: career_profiling_db
     user: career_profiling_user
