--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,32 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-pymysql==1.1.0
-psycopg2-binary==2.9.9
-cryptography==41.0.7
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-google-generativeai==0.3.1
+# fastapi==0.104.1
+# uvicorn[standard]==0.24.0
+# sqlalchemy==2.0.23
+# pymysql==1.1.0
+# psycopg2-binary==2.9.9
+# cryptography==41.0.7
+# python-jose[cryptography]==3.3.0
+# passlib[bcrypt]==1.7.4
+# python-multipart==0.0.6
+# pydantic==2.5.0
+# pydantic-settings==2.1.0
+# python-dotenv==1.0.0
+# google-generativeai==0.3.1
 
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.1
+
+sqlalchemy>=2.0.30
+pymysql>=1.1.0
+psycopg2-binary>=2.9.9
+
+cryptography>=42.0.7
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.9
+
+pydantic>=2.7.4
+pydantic-settings>=2.2.1
+typing-extensions>=4.12.0
+
+python-dotenv>=1.0.1
+google-generativeai>=0.4.1
