--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,8 @@ psycopg2-binary>=2.9.9
 
 cryptography>=42.0.7
 python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
+passlib[bcrypt]==1.7.4 
+bcrypt==4.1.2
 python-multipart>=0.0.9
 
 pydantic>=2.7.4
